--- a/Git_Group5_WorkshopHomework/Git_Group5_WorkshopHomework/Git_Group5_WorkshopHomework.csproj
+++ b/Git_Group5_WorkshopHomework/Git_Group5_WorkshopHomework/Git_Group5_WorkshopHomework.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Clarise.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Clarise.Designer.cs">
+      <DependentUpon>Clarise.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,9 @@
     <Compile Include="Qform.Designer.cs">
       <DependentUpon>Qform.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Clarise.resx">
+      <DependentUpon>Clarise.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
